# fm-dns

./: Cargo.toml  makefile  readme.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
fm_dns/: Cargo.toml
fm_dns/src/: lib.rs  scanner.rs  stdout.rs
fm_dns/src/scanner/: model.rs
src/: application.rs  args.rs  cli.rs  main.rs  scanner.rs  stdout.rs
src/scanner/: model.rs
