[package]
name = "fm-dns-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fm-dns-cli"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fm_dns = { path = "../fm_dns" }
tokio = { version = "1.35.1", features = ["full"] }
